Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.4-Beta 1
  FEATURES:
    * LyricsApplet: the lyrics in are now updated when they were changed in a
      different place (for example in TagDialog). Conflicts have to be resolved
      by the user (therefore a message is shown which asks the user which changes
      should be kept).
    * Permit the use of iPod Touch 3G and possibly newer devices. Thanks to
      Aurélien Croc for the patch!
    * Match space-separated search terms in the playlist filter var individually. Thanks
      Thomas Karpiniec for the patch!
    * Added new context applet for displaying song tab information. Thanks
      Rainer Sigle for the patch!
    * Added ability to set/update Album Artist.
    * Added map view and calendar in the upcoming events applet.
    * Added support for all Wikipedia languages. (BR 220617)
    * Added incremental search in the Wikipedia applet (press
      '/' or global search key when in focus).
    * Added "Favorite Venues" to the upcoming events applet.
    * Read MusicBrainz IDs of MP4 files during scanning.
    * Ability to hide and show the menu bar. Patch by 
      Valentyn Pavliuchenko <valentyn.pavliuchenko@gmail.com>.
    * Size of OSD font is now configurable. (BR 195186)
    * Musicbrainz-based mass tagging UI by Sergey Ivanov.
    * New easy to use table-based UI for Ampache server configuration. (BR 200703)
    * OPML export for podcast subscriptions. (BR 126120)
    * New "Playlist Length" constraint for the APG, which allows you to specify
      the number of tracks in the playlist.  What was the "Playlist Length "
      constraint is now called "Playlist Duration".
    * MPRIS2 support for controlling Amarok over D-Bus.
    * New "Playdar Collection" allows searching for and listening
      to music provided by a running local Playdar service.

  CHANGES:
    * Added a "Donors" tab to the About dialog for our generous Roktober 2010