@@ -75,6 +75,9 @@ public slots:
     void scrollToActiveTrack();
     void selectSource();
 
+    void downOneTrack();
+    void upOneTrack();
+
     // Workaround for BUG 222961 and BUG 229240: see implementation for more comments.
     void setCurrentIndex( const QModelIndex &index );
     void selectionModel_setCurrentIndex( const QModelIndex &index, QItemSelectionModel::SelectionFlags command );    // Never call selectionModel()->setCurrentIndex() directly!
@@ -105,6 +108,7 @@ private slots:
     void slotPlaylistActiveTrackChanged();
     void bottomModelRowsInserted( const QModelIndex& parent, int start, int end );
     void bottomModelRowsInsertedScroll();
+    void moveTrackSelection( int offset );
 
     void trackActivated( const QModelIndex& );
     void updateProxyTimeout();
